2008-10-27  Thorsten Kukuk  <kukuk@thkukuk.de>

	* doc/man/pam_setcred.3.xml: Document when credentials
	should be deleted.
	* po/ja.po: Fix syntax error.
	* po/de.po: Update translations.
	* po/*.po: Regenerate with pam_tally2 added.

2008-10-23  Taylon Silmer Lacerda Silva <taylonsilva@gmail.com>

	* po/pt_BR.po: Updated translations.

2008-10-23  Krishna Babu K <kkrothap@redhat.com>

	* po/LINGUAS: New language.
	* po/te.po: New translation to Telugu.

2008-10-23  Manoj Kumar Giri <mgiri@redhat.com>

	* po/or.po: Updated translations.

2008-10-21  Amitakhya Phukan <aphukan@redhat.com>

	* po/as.po: Updated translations.

2008-10-21  Ondrej Sulek <feonsu@gmail.com>

	* po/sk.po: Updated translations.

2008-10-21  Terry Chuang <tchuang@redhat.com>

	* po/zh_TW.po: Updated translations.

2008-10-21  Kiyoto Hashida <khashida@redhat.com>

	* po/ja.po: Updated translations.

2008-10-21  Francesco Valente <fvalen@redhat.com>

	* po/it.po: Updated translations.

2008-10-21  Peter van Egdom <p.van.egdom@gmail.com>

	* po/nl.po: Updated translations.

2008-10-20  Ani Peter <apeter@redhat.com>

	* po/ml.po: Updated translations.

2008-10-20  Pablo Martin-Gomez <pablo.martin-gomez@laposte.net>

	* po/fr.po: Updated translations.

2008-10-20  Runa Bhattacharjee <runab@redhat.com>

	* po/bn_IN.po: Updated translations.

2008-10-20  Shankar Prasad <svenkate@redhat.com>

	* po/kn.po: Updated translations.

2008-10-20  Leah Liu <lliu@redhat.com>

	* po/zh_CN.po: Updated translations.

2008-10-20  Ondrej Sulek <feonsu@gmail.com>

	* po/LINGUAS: New language.
	* po/sk.po: New translation to Slovak.

2008-10-17  Tomas Mraz <t8m@centrum.cz>

	* configure.in: Add modules/pam_tally2/Makefile.
	* doc/sag/Linux-PAM_SAG.xml: Include pam_tally2.xml.
	* doc/sag/pam_tally2.xml: New.
	* libpam/pam_static_modules.h: Add pam_tally2 static struct.
	* modules/Makefile.am: Add pam_tally2 directory.
	* modules/pam_tally2/Makefile.am: New.
	* modules/pam_tally2/README.xml: New.