@@ -8,4 +8,7 @@ libtool.m4
 nls.m4
 po.m4
 progtest.m4
-
+ltoptions.m4
+ltsugar.m4
+ltversion.m4
+lt~obsolete.m4
